--- a/backend/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/backend/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,3 @@
 databaseChangeLog:
-  - includeAll:
-      path: db/changelog/changes/
+  - include:
+      file: db/changelog/changes/v0001-baseline.sql
