--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -27,7 +27,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "../frontend/node_modules/bootstrap/dist/css/bootstrap.css",
+              "../frontend/node_modules/font-awesome/css/font-awesome.min.css",
+              "../frontend/node_modules/primeng/resources/primeng.min.css",
+              "../frontend/node_modules/primeng/resources/themes/kasper/theme.css"
             ],
             "scripts": []
           },
