--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -28,10 +28,10 @@
             ],
             "styles": [
               "src/styles.scss",
-              "../frontend/node_modules/bootstrap/dist/css/bootstrap.css",
-              "../frontend/node_modules/font-awesome/css/font-awesome.min.css",
-              "../frontend/node_modules/primeng/resources/primeng.min.css",
-              "../frontend/node_modules/primeng/resources/themes/kasper/theme.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/font-awesome/css/font-awesome.min.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeng/resources/themes/kasper/theme.css"
             ],
             "scripts": []
           },
