Change logging properties for production environment

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -16,8 +16,8 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
-logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.show-sql=false
+logging.level.org.hibernate.SQL=ERROR
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Liquibase.
