Disable spring devtools in production

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 server.port=8080
 server.compression.enabled=true
 #server.servlet.context-path=/api
-
+spring.devtools.add-properties=false
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:${DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
