--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -29,12 +29,14 @@
             "styles": [
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/primeflex/primeflex.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
               "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/primeng/resources/themes/kasper/theme.css"
+              "node_modules/primeng/resources/themes/kasper/theme.css",
             ],
             "scripts": []
           },
+
           "configurations": {
             "production": {
               "fileReplacements": [
