--- a/backend/src/main/resources/liquibase.properties
+++ b/backend/src/main/resources/liquibase.properties
@@ -3,7 +3,7 @@ driver = org.postgresql.Driver
 url = jdbc:postgresql://localhost:5432/ebanking
 username=dev
 password=dev
-referenceUrl=hibernate:spring:eu.happybit.konchris.koncrisbackend.entity?dialect=org.hibernate.dialect.PostgreSQLDialect
-outputChangeLogFile=src/main/resources/db/changelog/liquibase-outputChangeLoq.postgresql.sql
+referenceUrl=hibernate:spring:eu.happybit.konchris.koncrisbackend.entity?dialect=org.hibernate.dialect.PostgreSQLDialect&hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
+outputChangeLogFile=src/main/resources/db/changelog/changes/liquibase-outputChangeLoq.postgresql.yaml
 diffChangeLogFile=src/main/resources/db/changelog/liquibase-diff-changeLog.xml
 changeLogFile=src/main/resources/db/changelog/db.changelog-master.yaml
