Add account management part 1

--- a/backend/src/main/resources/application-test.properties
+++ b/backend/src/main/resources/application-test.properties
@@ -15,13 +15,13 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Liquibase.
-spring.liquibase.enabled=true
+spring.liquibase.enabled=false
 spring.liquibase.url=  ${spring.datasource.url}
 spring.liquibase.user= ${spring.datasource.username}
 spring.liquibase.password= ${spring.datasource.password}
