--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 server.compression.enabled=true
-server.port=8081
 #server.servlet.context-path=/api
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+# spring.datasource.url=jdbc:postgresql://localhost:5432/ebanking
 spring.datasource.url=jdbc:postgresql://localhost:5432/ebanking
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=dev
@@ -15,13 +15,13 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Liquibase.
-spring.liquibase.enabled=true
+spring.liquibase.enabled=false
 spring.liquibase.url=  ${spring.datasource.url}
 spring.liquibase.user= ${spring.datasource.username}
 spring.liquibase.password= ${spring.datasource.password}
