--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
 # Liquibase.
-spring.liquibase.enabled=true
+spring.liquibase.enabled=false
 spring.liquibase.url=  ${spring.datasource.url}
 spring.liquibase.user= ${spring.datasource.username}
 spring.liquibase.password= ${spring.datasource.password}
