Disable frontend module on parent pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <relativePath />
     </parent>
     <modules>
-        <module>frontend</module>
+          <!--<module>frontend</module>-->
         <module>backend</module>
     </modules>
 </project>
