--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -15,7 +15,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 logging.level.org.hibernate.SQL=ERROR
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
@@ -31,13 +31,3 @@ spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 app.jwtSecret=${JWT_SECRET}
 app.jwtExpirationInMs = 604800000
 
-# Email (MailProperties)
-#spring.mail.default-encoding=UTF-8
-#spring.mail.host= # SMTP server host. For instance, `smtp.example.com`.
-#spring.mail.jndi-name= # Session JNDI name. When set, takes precedence over other Session settings.
-#spring.mail.password= # Login password of the SMTP server.
-#spring.mail.port= 25
-#spring.mail.properties.*= # Additional JavaMail Session properties.
-#spring.mail.protocol=smtp # Protocol used by the SMTP server.
-#spring.mail.test-connection=true # Whether to test that the mail server is available on startup.
-#spring.mail.username= # Login user of the SMTP server.
