--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.6.5",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "ng2-currency-mask": "^5.3.1",
     "primeflex": "^1.0.0-rc.1",
     "primeng": "^7.1.0",
     "rxjs": "~6.3.3",
